Fixed row alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -69,7 +69,7 @@ body {
 .value span {
   background-color: black;
   /*height: 100%;*/
-  padding-top: 12px;
+  padding-top: 11px;
   margin-bottom: 10px;
   padding-bottom: 2px;
   padding-right: 16px;
